--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="container-items2">
     
-        <ul class="ul-2">
+        <ul class="  js_ul2 ul-2">
             
             </ul>
     </div>
