--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h1>CHEINSTORE</h1>
     <div class="container-search">
        <form action="search">
-          <input class="search" type="text" name="search" id="search-box" placeholder="example: camiseta">
-          <button class="button-search">search</button>
+          <input class="  js_searchinput search" type="text" name="search" id="search-box" placeholder="example: camiseta">
+          <button class=" js_buttonsearch button-search">search</button>
         </form>
     </div>
     <section class="container">
     <div class="container-items1"> 
         
-        <ul>
-           <h3>Shopping card</h3>
+        <ul class="js_ul1">
+           <h3></h3>
         </ul>
     </div>
 
