--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
     <section class="container">
     <div class="container-items1"> 
-        
+        <h3>carrito</h3>
         <ul class="js_ul1">
-           <h3></h3>
+           
         </ul>
     </div>
 
