--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>FRIKIOFERTAS</h1>
     <div class="container-search">
        <form action="search">
-          <input class="  js_searchinput search" type="text" name="search" id="search-box" placeholder="example: camiseta">
+          <input class="  js_searchinput search" type="text" name="search" id="search-box" placeholder="Search products">
           <button class=" js_buttonsearch button-search">search</button>
         </form>
     </div>
